--- a/.github/workflows/java-sample-app-ecr-deploy.yml
+++ b/.github/workflows/java-sample-app-ecr-deploy.yml
@@ -7,7 +7,8 @@
 # testing ADOT Java
 name: Sample App Deployment - Java ECR
 on:
-  push:
+  workflow_dispatch:
+
 permissions:
   id-token: write
   contents: read
