--- a/.github/workflows/test-2.yml
+++ b/.github/workflows/test-2.yml
@@ -7,7 +7,9 @@
 ## including logs, metrics, and traces.
 name: Java EKS Enablement Canary Testing
 on:
-  push:
+#  push:
+  workflow_dispatch:
+
 
 permissions:
   id-token: write
