--- a/.github/workflows/test-2.yml
+++ b/.github/workflows/test-2.yml
@@ -7,7 +7,7 @@
 ## including logs, metrics, and traces.
 name: Java EKS Enablement Canary Testing
 on:
-#  push:
+  push:
   workflow_dispatch:
 
 
@@ -84,3 +84,6 @@ jobs:
       test-cluster-name: 'e2e-canary-test'
       caller-workflow-name: 'appsignals-e2e-eks-canary-test'
       java-version: '22'
+
+
+
