--- a/.github/workflows/traffic-generator-image-build.yml
+++ b/.github/workflows/traffic-generator-image-build.yml
@@ -88,4 +88,4 @@ jobs:
         working-directory: sample-apps/traffic-generator
         run: |
           zip traffic-generator.zip ./index.js ./package.json
-          aws s3 cp traffic-generator.zip s3://aws-appsignals-sample-app-prod-${{ matrix.aws-region }}/traffic-generator.zip
+          aws s3 cp traffic-generator.zip s3://aws-appsignals-sample-app-prod-${{ matrix.aws-region }}-2/traffic-generator.zip
