--- a/.github/workflows/java-ec2-canary.yml
+++ b/.github/workflows/java-ec2-canary.yml
@@ -10,6 +10,7 @@ on:
   schedule:
     - cron: '6,31 * * * *' # run the workflow at 6th and 31th minute of every hour
   workflow_dispatch: # be able to run the workflow on demand
+  push:
 
 permissions:
   id-token: write
