--- a/.github/workflows/java-eks-otlp-ocb-canary.yml
+++ b/.github/workflows/java-eks-otlp-ocb-canary.yml
@@ -11,6 +11,7 @@ on:
   schedule:
     - cron: '12,37 * * * *' # run the workflow at 12th and 37th minute of every hour
   workflow_dispatch: # be able to run the workflow on demand
+  push:
 
 permissions:
   id-token: write
