--- a/.github/workflows/java-sample-app-ecr-deploy.yml
+++ b/.github/workflows/java-sample-app-ecr-deploy.yml
@@ -8,6 +8,7 @@
 name: Sample App Deployment - Java ECR
 on:
   workflow_dispatch: # be able to run the workflow on demand
+  push:
 
 permissions:
   id-token: write
