--- a/.github/workflows/python-sample-app-s3-deploy.yml
+++ b/.github/workflows/python-sample-app-s3-deploy.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Upload to S3
         working-directory: sample-apps/python
-        run: aws s3api put-object --bucket ${{ secrets.APP_SIGNALS_E2E_EC2_JAR }}-prod-${{ matrix.aws-region }}-2 --body ./python-sample-app.zip --key python-sample-app.zip
+        run: aws s3api put-object --bucket aws-appsignals-sample-app-prod-${{ matrix.aws-region }}-2 --body ./python-sample-app.zip --key python-sample-app.zip
 
       - name: Build Lambda Sample App
         uses: actions/checkout@v4
@@ -63,5 +63,5 @@ jobs:
 
       - name: Upload to Lambda Sample App to S3
         working-directory: lambda-layer/sample-apps
-        run: aws s3api put-object --bucket ${{ secrets.APP_SIGNALS_E2E_EC2_JAR }}-prod-${{ matrix.aws-region }}-2 --body ./build/function.zip --key pyfunction.zip
+        run: aws s3api put-object --bucket aws-appsignals-sample-app-prod-${{ matrix.aws-region }}-2 --body ./build/function.zip --key pyfunction.zip
 
