--- a/.github/workflows/java-k8s-canary.yml
+++ b/.github/workflows/java-k8s-canary.yml
@@ -11,7 +11,7 @@ on:
   schedule:
     - cron: '0,25 * * * *' # run the workflow at 0th and 25th minute of every hour
   workflow_dispatch: # be able to run the workflow on demand
-  # push:
+  push:
 
 permissions:
   id-token: write
