--- a/.github/workflows/java-eks-canary.yml
+++ b/.github/workflows/java-eks-canary.yml
@@ -10,8 +10,9 @@ on:
   # schedule:
   #   - cron: '8,33 * * * *' # run the workflow at 8th and 33th minute of every hour
   workflow_dispatch: # be able to run the workflow on demand
+  push:
 
-  
+
 permissions:
   id-token: write
   contents: read
